# Sharelock

./: .gitignore  README.md  main.py  pyproject.toml  test.txt  todo.md
data/: ETERNAL_data.json  GROWW_data.json  MEESHO_data.json  RELIANCE_data.json
src/: __init__.py  screener_scrape.py  vector_db.py
src/agents/: __init__.py  analysts.py  base_worker.py  graph.py  multi_agent_system.py  stock_agent.py
src/mcp_server/: __init__.py  server.py
src/qualitative_db/: __init__.py  __main__.py  chunking.py  classification.py  cli.py  config.py  database.py  extractors.py  formatting.py
src/tools/: __init__.py  company_profile.py  corporate_actions.py  financial_ratios.py  get_scraped_data.py  historical_data.py  nse_stock_price.py  shareholding_pattern.py  stock_price.py
