[project]
name = "sharelock"
version = "0.1.0"
description = "Stock Market Analysis Agent with MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.0.0",
    "yfinance>=0.2.0",
    "nsepython>=2.0",
]

[project.scripts]
sharelock-mcp = "src.mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
