[project]
name = "sharelock"
version = "0.1.0"
description = "Stock Market Analysis Agent with MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.0.0",
    "yfinance>=0.2.0",
    "ollama>=0.4.0",
    "playwright>=1.57.0",
    "chromadb>=0.4.22",
    "pypdf>=4.0.0",
    "pdfplumber>=0.11.0",
    "sentence-transformers>=2.2.2",
]

[project.scripts]
sharelock-mcp = "src.mcp_server.server:main"
sharelock-agent = "src.agents.stock_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
